--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,5 @@ Flask-Script==2.0.5
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 Flask-User==1.0.1.5
-future=0.18.2
-viberbot=1.0.12
+future==0.18.2
+viberbot==1.0.12
